<resources>
    <string name="app_name">Recipe Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_list_difficulty">Difficulty: </string>
    <string name="option_menu_sort">Sort</string>
    <string name="blank_cal">Calories: 0 kcal</string>
    <string name="blank_carbos">Carbohydrates: 0 g</string>
    <string name="blank_protein">Proteins: 0 g</string>
    <string name="blank_fat">Fats: 0 g</string>
    <string name="text_cal">Calories:</string>
    <string name="text_carbos">Carbohydrates:</string>
    <string name="text_protein">Proteins:</string>
    <string name="text_fat">Fats:</string>
</resources>