<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".RecipeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:text="Name"/>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:maxWidth="150dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:srcCompat="@mipmap/ic_img_placeholder" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Time"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <TextView
                    android:id="@+id/timeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/image"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="30 Minute"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Ingredients"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/blank_cal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ingredient" />

                    <TextView
                        android:id="@+id/carbohydrate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/blank_carbos"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/calories" />

                    <TextView
                        android:id="@+id/protein"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/blank_protein"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/carbohydrate" />

                    <TextView
                        android:id="@+id/fat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/blank_fat"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/protein" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Description"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_blank_fragment"
                    app:layout_constraintTop_toBottomOf="@+id/image"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            </androidx.cardview.widget.CardView>




        </LinearLayout>


<!--    <TextView-->
<!--        android:id="@+id/name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/hello_blank_fragment"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>-->

<!--    <TextView-->
<!--        android:id="@+id/headline"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/hello_blank_fragment"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/name"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>-->

<!--    <ImageView-->
<!--        android:id="@+id/image"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintHeight_max="150dp"-->
<!--        app:layout_constraintWidth_percent="0.5"-->
<!--        android:layout_marginHorizontal="15dp"-->
<!--        android:layout_marginVertical="10dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/headline"-->
<!--        app:srcCompat="@mipmap/ic_img_placeholder" />-->

<!--    <TextView-->
<!--        android:id="@+id/description"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/hello_blank_fragment"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/image"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>-->

</ScrollView>